[gd_scene load_steps=4 format=3 uid="uid://kedexq4u3ytk"]

[ext_resource type="Script" uid="uid://cst3ffrqovgcj" path="res://scenes/ui/main_menu/main_menu.gd" id="1_e8t4i"]
[ext_resource type="Theme" uid="uid://dewy37x4x4k3q" path="res://assets/ui/theme.tres" id="2_qt1dd"]

[sub_resource type="GDScript" id="GDScript_l6cm7"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8t4i")

[node name="MainMenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Play" type="Button" parent="MainMenuContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Quit")
theme = ExtResource("2_qt1dd")
text = "Play"
script = SubResource("GDScript_l6cm7")

[node name="Quit" type="Button" parent="MainMenuContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Play")
theme = ExtResource("2_qt1dd")
text = "Quit"

[node name="LevelSelectionContainer" type="HSplitContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelContainer" type="VBoxContainer" parent="LevelSelectionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Level1" type="Button" parent="LevelSelectionContainer/LevelContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../Back")
theme = ExtResource("2_qt1dd")
text = "Level 1"

[node name="Back" type="Button" parent="LevelSelectionContainer/LevelContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Level1")
theme = ExtResource("2_qt1dd")
text = "Back"

[node name="Panel" type="Panel" parent="LevelSelectionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreContainer" type="VBoxContainer" parent="LevelSelectionContainer/Panel"]
layout_mode = 2
offset_right = 570.0
offset_bottom = 648.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="LevelSelectionContainer/Panel/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_qt1dd")
text = "000000"

[connection signal="pressed" from="MainMenuContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenuContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="LevelSelectionContainer/LevelContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="LevelSelectionContainer/LevelContainer/Back" to="." method="_on_back_pressed"]
